Tis file documents the revision history for Perl extension Catalyst.

5.5
        - Switched to Text::SimpleTable

5.49_03 2005-11-03 12:00:00
        - Fixed $c->req->{path} for backwards-compatibility.
        - Allow debug to be disabled via ENV as well as enabled.
        - Added -scripts option to catalyst.pl for script updating
        - Changed helpers to default to long types, Controller instead of C
        - Added Catalyst::Controller, Catalyst::Model and Catalyst::View
          base classes
        - Added JavaScript to debug screen to show and hide specific dumps
        - Added _DISPATCH, _BEGIN, _AUTO, _ACTION and _END actions
        - Added multi process external FastCGI support
          (see myapp_fastcgi.pl -help) (Sam Vilain)
        - Restarter process in HTTP engine now properly exits when the
          parent app is shut down.  
        - Improved performance of restarter loop while watching for
          changed files.
        - Restarter will now detect new files added to an app on systems
          that change directory mtimes when new files are created.
        - Restarter now properly handles modules that are deleted from an
          application.
        - Fixed memory leak in TestApp.

5.49_02 2005-10-26 12:39:00 
        - Whole new dispatcher!
        - Added index action
        - Added path_to method
        - Added support for passing an IO::Handle object to $c->res->body.
          (Andrew Bramble)
        - Added a new welcome screen.
        - Included Catalyst buttons and icons in helper.
        - Added Static::Simple plugin to core.
        - Added self restarting test server
        - Added filename to debug output for uploaded files.
        - Fixed forwarding with embedded arguments.
        - Fixed handling of escaped query strings.
        - Added upload parameters back into $c->req->params.
        - Added multiple paths support to dispatcher
        - Fixed bug in req->path where changing the path added a trailing